added instagram links

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
           <a class="header-social-icon" href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
           </a>
+          <a class="header-social-icon" href="https://www.instagram.com/thedanceschool">
+            <i class="fa fa-instagram"></i>
+          </a>
         </div><!-- .header-social end -->
 
       </div>
@@ -74,6 +77,9 @@
           <p>E-mail</p>
           <p><a href="mailto:info@ktthedanceschool.co.uk">info@ktthedanceschool.co.uk</a></p>
           <hr>
+          <p>Follow us on Instagram <i class="fa fa-instagram"></i></p>
+          <p><a href="https://www.instagram.com/thedanceschool">instagram.com/thedanceschool</a></p>
+          <hr>
         </div>
         <div>
           <p>Find us on Facebook <i class="fa fa-facebook-square"></i></p>
@@ -104,6 +110,10 @@
           <a href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
             Find us on Facebook
+          </a>
+          <a href="https://www.instagram.com/thedanceschool/">
+            <i class="fa fa-instagram"></i>
+            Follow us on Instagram
           </a>
         </div>
 
