--- a/timetable.html
+++ b/timetable.html
@@ -42,6 +42,9 @@
           <a class="header-social-icon" href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
           </a>
+          <a class="header-social-icon" href="https://www.instagram.com/thedanceschool">
+            <i class="fa fa-instagram"></i>
+          </a>
         </div><!-- .header-social end -->
 
       </div>
@@ -302,6 +305,10 @@
           <a href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
             Find us on Facebook
+          </a>
+          <a href="https://www.instagram.com/thedanceschool/">
+            <i class="fa fa-instagram"></i>
+            Follow us on Instagram
           </a>
         </div>
 
