update contact info

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
       <div class="contact-blurb">
         <h2>Contact</h2>
         <div>
-          <p>Call</p>
+          <p>Please contact Katie from The Dance School on</p>
           <p><a href="tel:07949216364">07949216364</a></p>
           <hr>
           <p>E-mail</p>
