--- a/timetable.html
+++ b/timetable.html
@@ -2,19 +2,22 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The Dance School provides fun and friendly dance lessons in Bexley, Sidcup and Greenwich; across a range of styles, and for all ages and abilities.">
+  <meta name="description"
+    content="The Dance School provides fun and friendly dance lessons in Bexley, Sidcup and Greenwich; across a range of styles, and for all ages and abilities.">
   <meta name="google-site-verification" content="tQvEBrfMVZG-t5flvSHNjZTDsSiSmtjLkFIyzzJCBCE">
 
   <link rel="canonical" href="http://ktthedanceschool.co.uk/">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-  <title>KT The Dance School | Dance Lessons for all ages and abilities, based in the Bexley, Sidcup and Greenwich areas</title>
+  <title>KT The Dance School | Dance Lessons for all ages and abilities, based in the Bexley, Sidcup and Greenwich areas
+  </title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="css/aos.css">
@@ -22,6 +25,7 @@
   <link href="css/app.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <header class="header">
@@ -65,272 +69,288 @@
   </header>
 
   <!-- You write code for this content block in another file -->
-  
 
-    <section>
 
-      <div class="jumbotron">
-        <div class="sub-title">
-          <h1>Timetable</h1>
-          <p>Standard Class Pricing:
-            <span class="ttable-price">30 minutes: £4</span>
-            <span class="ttable-price">45 minutes: £5.50</span>
-            <span class="ttable-price">1 hour: £7.50</span>
-          </p>
-          <p>
-            Discounts are given for termly payments and special offers are available.
-          </p>
-          <p>
-            Courses are available at David Lloyd centres. An average course of 12 weeks costs £66 for members. Non-members are welcome, please contact for more info regarding non-member pricing.
-          </p>
-          <p>
-            Click the buttons below for venue timetables.
-          </p>
-        </div>
+  <section>
+
+    <div class="jumbotron">
+      <div class="sub-title">
+        <h1>Timetable</h1>
+        <p>Standard Class Pricing:
+          <span class="ttable-price">30 minutes: £4</span>
+          <span class="ttable-price">45 minutes: £5.50</span>
+          <span class="ttable-price">1 hour: £7.50</span>
+        </p>
+        <p>
+          Discounts are given for termly payments and special offers are available.
+        </p>
+        <p>
+          Courses are available at David Lloyd centres. An average course of 12 weeks costs £66 for members. Non-members
+          are welcome, please contact for more info regarding non-member pricing.
+        </p>
+        <p>
+          Click the buttons below for venue timetables.
+        </p>
       </div>
+    </div>
 
-      <div class="container">
-
-        <div id="ttable-buttons">
-          <button data-filter=".iso-htl" class="btn">Holy Trinity Lamorbey School</button>
-          <button data-filter=".iso-dlkid" class="btn">David Lloyd Kidbrooke Village</button>
-          <button data-filter=".iso-dlsidcup" class="btn">David Lloyd Sidcup</button>
-        </div>
-
-        <div class="ttable-section">
-
-          <div class="ttable-item iso-htl">
-            <table class="table">
-              <caption>Holy Trinity Lamorbey School</caption>
-              <thead>
-                <tr>
-                  <th>Day</th>
-                  <th>Time</th>
-                  <th>Class</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Monday</td>
-                  <td>4:30 - 5:00</td>
-                  <td>Preparatory Tap</td>
-                </tr>
-                <tr>
-                  <td>Monday</td>
-                  <td>5:00 - 5:30</td>
-                  <td>Preparatory Ballet</td>
-                </tr>
-                <tr>
-                  <td>Monday</td>
-                  <td>5:30 - 6:15</td>
-                  <td>Grade 3 Ballet</td>
-                </tr>
-                <tr>
-                  <td>Monday</td>
-                  <td>6:15 - 7:00</td>
-                  <td>Grade 3 Tap</td>
-                </tr>
-                <tr>
-                  <td>Monday</td>
-                  <td>7:00 - 7:45</td>
-                  <td>Disco Street Jazz</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>4:30 - 5:00</td>
-                  <td>Preparatory Tap</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>5:00 - 5:30</td>
-                  <td>Preparatory Ballet</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>5:30 - 6:00</td>
-                  <td>Primary Ballet</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>6:00 - 6:30</td>
-                  <td>Primary Tap</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>6:30 - 7:00</td>
-                  <td>Ballet and Point Technique</td>
-                </tr>
-                <tr>
-                  <td>Tuesday</td>
-                  <td>7:00 - 7:45</td>
-                  <td>Advanced Street and Lyrical</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>5:00 - 5:30</td>
-                  <td>Street Jazz</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>5:30 - 6:15</td>
-                  <td>Musical Theatre</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>6:15 - 7:00</td>
-                  <td>Troop</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>7:00 - 7:30</td>
-                  <td>Tap</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div class="ttable-item iso-dlkid">
-            <table class="table">
-              <caption>David Lloyd Kidbrooke Village</caption>
-              <thead>
-                <tr>
-                  <th>Day</th>
-                  <th>Time</th>
-                  <th>Class</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Monday</td>
-                  <td>4:15 - 5:00</td>
-                  <td>Preparatory Ballet</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>1:30 - 2:15</td>
-                  <td>Baby Ballerina</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>4:30 - 5:00</td>
-                  <td>Rosette Ballet Ages 4-6</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>5:00 - 5:30</td>
-                  <td>Preparatory Tap Ages 4-7</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>5:30 - 6:00</td>
-                  <td>Musical Theatre Ages 5+</td>
-                </tr>
-                <tr>
-                  <td>Wednesday</td>
-                  <td>6:00 - 6:30</td>
-                  <td>Ballroom and Latin Ages 11+</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>5:00 - 5:45</td>
-                  <td>Primary Ballet</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>6:15 - 7:00</td>
-                  <td>Commercial Street</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>7:30 - 8:30</td>
-                  <td>Adult Ballroom and Latin</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div class="ttable-item iso-dlsidcup">
-            <table class="table">
-              <caption>David Lloyd Sidcup</caption>
-              <thead>
-                <tr>
-                  <th>Day</th>
-                  <th>Time</th>
-                  <th>Class</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Thursday</td>
-                  <td>1:30 - 2:15</td>
-                  <td>Baby Ballerina</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>4:00 - 5:00</td>
-                  <td>Ballet and Tap (Prep Grade Studio 1 and Primary Grade Studio 2)</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>5:00 - 5:45</td>
-                  <td>Musical Theatre</td>
-                </tr>
-                <tr>
-                  <td>Friday</td>
-                  <td>5:45 - 6:30</td>
-                  <td>Commercial</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-        </div><!-- end .ttable-section -->
-
-      </div><!-- end .container -->
-    <section>
-
-  
-
-  <!-- Footer -->
-  <footer class="footer">
     <div class="container">
 
-      <div>
-        <div class="footer-social-icons">
-          <a href="tel:07949216364">
-            <i class="fa fa-phone social"></i>
-            07949216364
-          </a>
-          <a href="mailto:info@ktthedanceschool.co.uk">
-            <i class="fa fa-envelope social"></i>
-            info@ktthedanceschool.co.uk
-          </a>
-          <a href="https://www.facebook.com/ktthedanceschool/">
-            <i class="fa fa-facebook-square"></i>
-            Find us on Facebook
-          </a>
-          <a href="https://www.instagram.com/thedanceschool/">
-            <i class="fa fa-instagram"></i>
-            Follow us on Instagram
-          </a>
+      <div id="ttable-buttons">
+        <button data-filter=".iso-htl" class="btn">Holy Trinity Lamorbey School</button>
+        <button data-filter=".iso-dlkid" class="btn">David Lloyd Kidbrooke Village</button>
+        <button data-filter=".iso-dlsidcup" class="btn">David Lloyd Sidcup</button>
+      </div>
+
+      <div class="ttable-section">
+
+        <div class="ttable-item iso-htl">
+          <table class="table">
+            <caption>Holy Trinity Lamorbey School</caption>
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Class</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Monday</td>
+                <td>4:30 - 5:00</td>
+                <td>Grade 1 Tap</td>
+              </tr>
+              <tr>
+                <td>Monday</td>
+                <td>5:00 - 5:30</td>
+                <td>Grade 1 Ballet</td>
+              </tr>
+              <tr>
+                <td>Monday</td>
+                <td>5:30 - 6:15</td>
+                <td>Grade 5 Ballet</td>
+              </tr>
+              <tr>
+                <td>Monday</td>
+                <td>6:15 - 7:00</td>
+                <td>Grade 5 Tap</td>
+              </tr>
+              <tr>
+                <td>Monday</td>
+                <td>7:00 - 7:45</td>
+                <td>Teenage Disco Street Jazz</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>5:00 - 5:30</td>
+                <td>Street Jazz</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>5:30 - 6:15</td>
+                <td>Musical Theatre</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>6:15 - 7:00</td>
+                <td>Troupe class (by invitation)</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
 
-        <img class="footer-logo" src="img/kt-dance-logo.png">
-      </div>
+        <div class="ttable-item iso-dlkid">
+          <table class="table">
+            <caption>David Lloyd Kidbrooke Village</caption>
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Class</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Monday</td>
+                <td>4:30 - 5:00</td>
+                <td>Primary Tap</td>
+              </tr>
+              <tr>
+                <td>Monday</td>
+                <td>5:00 - 5:30</td>
+                <td>Primary Ballet</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>1:30 - 2:15</td>
+                <td>Preschool Ballet and Movement</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>4:30 - 5:00</td>
+                <td>Medal level Ballet</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>5:00 - 5:30</td>
+                <td>Medal level Tap</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>5:30 - 6:00</td>
+                <td>Musical Theatre Ages 5+</td>
+              </tr>
+              <tr>
+                <td>Wednesday</td>
+                <td>6:00 - 6:30</td>
+                <td>Ballroom and Latin</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:30 - 5:00</td>
+                <td>Preparatory Tap</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:00 - 5:30</td>
+                <td>Preparatory Ballet</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:30 - 6:15</td>
+                <td>Commercial Street</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>7:30 - 8:30</td>
+                <td>Adult Ballroom and Latin</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-      <div class="fb-iframe-container">
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-      </div>
+        <div class="ttable-item iso-dlsidcup">
+          <table class="table">
+            <caption>David Lloyd Sidcup</caption>
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Class</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Thursday</td>
+                <td>1:30 - 2:15</td>
+                <td>Preschool Ballet and Movement</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:00 - 4:30</td>
+                <td>Preparatory Tap</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:30 - 5:00</td>
+                <td>Preparatory Ballet</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:00 - 4:30</td>
+                <td>Primary Tap</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>4:30 - 5:00</td>
+                <td>Primary Ballet</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:00 - 5:30</td>
+                <td>Grade 1 Tap</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:30 - 6:00</td>
+                <td>Grade 1 Ballet</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>6:00 - 6:30</td>
+                <td>Grade 2 Tap</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>6:30 - 7:00</td>
+                <td>Grade 2 Ballet</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:00 - 5:45</td>
+                <td>Teenage Musical Theatre</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td>5:45 - 6:30</td>
+                <td>Teenage Commercial Street Jazz</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+      </div><!-- end .ttable-section -->
 
     </div><!-- end .container -->
+    <section>
 
-    <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
 
-  </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/isotope.pkgd.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/app.js"></script>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="container">
+
+          <div>
+            <div class="footer-social-icons">
+              <a href="tel:07949216364">
+                <i class="fa fa-phone social"></i>
+                07949216364
+              </a>
+              <a href="mailto:info@ktthedanceschool.co.uk">
+                <i class="fa fa-envelope social"></i>
+                info@ktthedanceschool.co.uk
+              </a>
+              <a href="https://www.facebook.com/ktthedanceschool/">
+                <i class="fa fa-facebook-square"></i>
+                Find us on Facebook
+              </a>
+              <a href="https://www.instagram.com/thedanceschool/">
+                <i class="fa fa-instagram"></i>
+                Follow us on Instagram
+              </a>
+            </div>
+
+            <img class="footer-logo" src="img/kt-dance-logo.png">
+          </div>
+
+          <div class="fb-iframe-container">
+            <iframe
+              src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+              width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+              allowTransparency="true"></iframe>
+          </div>
+
+        </div><!-- end .container -->
+
+        <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span
+            id="year"></span></p>
+
+      </footer>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="js/isotope.pkgd.min.js"></script>
+      <script src="js/aos.js"></script>
+      <script src="js/app.js"></script>
 </body>
+
 </html>
