Remove Nat from teachers in about section

--- a/about.html
+++ b/about.html
@@ -2,19 +2,22 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The Dance School provides fun and friendly dance lessons in Bexley, Sidcup and Greenwich; across a range of styles, and for all ages and abilities.">
+  <meta name="description"
+    content="The Dance School provides fun and friendly dance lessons in Bexley, Sidcup and Greenwich; across a range of styles, and for all ages and abilities.">
   <meta name="google-site-verification" content="tQvEBrfMVZG-t5flvSHNjZTDsSiSmtjLkFIyzzJCBCE">
 
   <link rel="canonical" href="http://ktthedanceschool.co.uk/">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-  <title>KT The Dance School | Dance Lessons for all ages and abilities, based in the Bexley, Sidcup and Greenwich areas</title>
+  <title>KT The Dance School | Dance Lessons for all ages and abilities, based in the Bexley, Sidcup and Greenwich areas
+  </title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="css/aos.css">
@@ -22,6 +25,7 @@
   <link href="css/app.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <header class="header">
@@ -65,69 +69,87 @@
   </header>
 
   <!-- You write code for this content block in another file -->
-  
-    <section>
 
-      <div class="jumbotron">
-        <div class="sub-title">
-          <h1>About</h1>
-          <p>Our fantastic team of teachers are fully qualified, DBS checked and insured. Pupils can work towards examinations in all the genres we offer. We offer tests with the ISTD and IDTA. These examination bodies are recognised by the CDET (Council of Dance Teachers) and offer Ofqual regulated tests.</p>
-          <p>Scroll down to meet our fantastic teachers.</p>
-          <p>See what people are saying about The Dance School. <a class="test-link" href="testimonials.html">Read our testimonials.</a></p>
+  <section>
+
+    <div class="jumbotron">
+      <div class="sub-title">
+        <h1>About</h1>
+        <p>Our fantastic team of teachers are fully qualified, DBS checked and insured. Pupils can work towards
+          examinations in all the genres we offer. We offer tests with the ISTD and IDTA. These examination bodies are
+          recognised by the CDET (Council of Dance Teachers) and offer Ofqual regulated tests.</p>
+        <p>Scroll down to meet our fantastic teachers.</p>
+        <p>See what people are saying about The Dance School. <a class="test-link" href="testimonials.html">Read our
+            testimonials.</a></p>
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="about-section">
+        <img class="teacher-img" src="img/teachers/k-durant.jpeg">
+        <div>
+          <h2>Katie Durant - AISTD, IDTAL4DIp, AIDTA</h2>
+          <p>Katie Durant trained at the famous Italia Conti Academy of Performing arts full time from the ages of 14-19
+            years old. During this time she gained many qualifications, including the Italia Conti National Diploma in
+            Performing Arts, Advanced levels in Ballet, Tap and Modern plus Associate teaching qualifications.
+            Highlights of her professional work over this time includes The Children's Royal Variety Performance, Step
+            into Ballet with Wayne Sleep and the well publicised play "Ghost from a Perfect Place" by multi
+            award-winning playwright Phillip Ridley. The 90's play celebrated 20 years in 2014 and with a revival in the
+            Arcola Theatre and Katie is proud to be listed in the Methuen edition of the book as the original Miss
+            Kerosene.
+            After graduating Katie gained contracts as a dancer working in France, Holland and Japan returning from her
+            travels in 1999. Katie then used her Associate qualifications to become a dance teacher which she has always
+            loved working with local Dance Schools and Primary Schools.</p>
+          <p>Katie established "The Dance School" in 2003 and is proud of what the pupils and school have achieved over
+            this time. Pupils can take exams with the ISTD and IDTA in all the genres that we teach in both Dance sport
+            and Theatre faculties. Katie is proud of the excellent pass rates over this time.</p>
+          <p>
+            Katie is also very proud of the Theatre shows "The Dance School" has produced:
+          <ul>
+            <li>Cirque du Dance- The Mick Jagger Centre, 2016</li>
+            <li>10 Years of "The Dance School"- The Woodville, 2014</li>
+            <li>Christmas Capers- The Mick Jagger Centre, 2012</li>
+            <li>School Rules- The Rose Theatre, 2009</li>
+            <li>Dance Doctor- The Mick Jagger Centre, 2007</li>
+            <li>A-Z of Dance- The Stag Theatre, 2006</li>
+            <li>Musicality- Sevenoaks Playhouse, 2004</li>
+          </ul>
+          </p>
+          <p>Katie has choreographed pieces for Rochester Cathedral Schools festival , Her Majesty's Theatre and
+            Sadler's Wells. Competition wise Katie has taught National and Area competition winners.
+            Proudest teaching moments: being invited to Dance in Trafalgar Square in connection to the Patrons Lunch,
+            dancing in the Speigeltent, Blackheath Common in connection to the Olympics.</p>
         </div>
       </div>
 
-      <div class="container">
-
-        <div class="about-section">
-          <img class="teacher-img" src="img/teachers/k-durant.jpeg">
-          <div>
-            <h2>Katie Durant - AISTD, IDTAL4DIp, AIDTA</h2>
-            <p>Katie Durant trained at the famous Italia Conti Academy of Performing arts full time from the ages of 14-19 years old. During this time she gained many qualifications, including the Italia Conti National Diploma in Performing Arts, Advanced levels in Ballet, Tap and Modern plus Associate teaching qualifications.
-Highlights of her professional work over this time includes The Children's Royal Variety Performance, Step into Ballet with Wayne Sleep and the well publicised play "Ghost from a Perfect Place" by multi award-winning playwright Phillip Ridley. The 90's play celebrated 20 years in 2014 and with a revival in the Arcola Theatre and Katie is proud to be listed in the Methuen edition of the book as the original Miss Kerosene.
-After graduating Katie gained contracts as a dancer working in France, Holland and Japan returning from her travels in 1999.  Katie then used her Associate qualifications  to become a dance teacher which she has always loved working with local Dance Schools and Primary Schools.</p>
-            <p>Katie established "The Dance School" in 2003 and is proud of what the pupils and school have achieved over this time. Pupils can take exams with the ISTD and IDTA in all the genres that we teach in both Dance sport and Theatre faculties. Katie is proud of the excellent pass rates over this time.</p>
-            <p>
-              Katie is also very proud of the Theatre shows "The Dance School" has produced:
-              <ul>
-                <li>Cirque du Dance- The Mick Jagger Centre, 2016</li>
-                <li>10 Years of "The Dance School"- The Woodville, 2014</li>
-                <li>Christmas Capers- The Mick Jagger Centre, 2012</li>
-                <li>School Rules- The Rose Theatre, 2009</li>
-                <li>Dance Doctor- The Mick Jagger Centre, 2007</li>
-                <li>A-Z of Dance- The Stag Theatre, 2006</li>
-                <li>Musicality- Sevenoaks Playhouse, 2004</li>
-              </ul>
-            </p>
-            <p>Katie has choreographed pieces for Rochester Cathedral Schools festival , Her Majesty's Theatre and Sadler's Wells. Competition wise Katie has taught National and Area competition winners.
-Proudest teaching moments: being invited to Dance in Trafalgar Square in connection to the Patrons Lunch, dancing in the Speigeltent, Blackheath Common in connection to the Olympics.</p>
-          </div>
+      <div class="about-section" data-aos="fade-up">
+        <img class="teacher-img" src="img/teachers/s-payne.jpg">
+        <div>
+          <h2>Sophie Lorraine Payne - LISTD, BBO Level 4 TQ Commercial Theatre</h2>
+          <p>Sophie is goal driven, creative, enthusiastic and innovative artist of the dance world with competence in
+            all styles of dance and syllabi with the ability and confidence to adapt. Sophie has a drive to choreograph
+            powerful, unforgettable dance routines that are both enjoyable and engaging for both the performers and
+            audience.</p>
+          <p>Sophie began dancing at five years old taking Ballet and Modern Jazz Theatre classes and a few years later
+            trained in Tap, Street Jazz and Musical Theatre alongside these. Upon leaving school Sophie studied at
+            Reynolds Performing Arts College where she trained to Advanced 1 and 2 in Ballet, Tap and Modern with the
+            ISTD. During her time at Reynolds; Sophie completed her Dance Diploma, BTEC Level 3 in Sport (Performance
+            and Excellence), NVQ Level 3 in Sports Performance, NVQ Level 2-Activity Leadership in Dance and NVQ Level
+            2- Exercise and Fitness (Gym Based Exercise). Upon Sophie’s graduation and after having assisted dance
+            classes for 5 years she embarked on her teaching career, instructing various dance styles and syllabi.
+            Alongside her teaching work Sophie studied for her Licentiate in Freestyle Dance (ISTD) and has since gained
+            her Level 4 BBO TQ and Intermediate British Gymnastics TQ. Sophie now has over eight years’ experience
+            teaching various dance genres, Musical Theatre and curriculum dance and gymnastics.</p>
+          <p>Sophie loves teaching dance, from a young age it has been her dream to feed that passion onto others, see
+            her students thrive and consequently reach their full potential. Sophie aims for her classes to be fun yet
+            disciplined allowing her students to aspire to work hard and to reach their personal goals.</p>
         </div>
+      </div>
 
-        <div class="about-section" data-aos="fade-up">
-          <img class="teacher-img" src="img/teachers/s-payne.jpg">
-          <div>
-            <h2>Sophie Lorraine Payne - LISTD, BBO Level 4 TQ Commercial Theatre</h2>
-            <p>Sophie is goal driven, creative, enthusiastic and innovative artist of the dance world with competence in all styles of dance and syllabi with the ability and confidence to adapt.  Sophie has a drive to choreograph powerful, unforgettable dance routines that are both enjoyable and engaging for both the performers and audience.</p>
-            <p>Sophie began dancing at five years old taking Ballet and Modern Jazz Theatre classes and a few years later trained in Tap, Street Jazz and Musical Theatre alongside these. Upon leaving school Sophie studied at Reynolds Performing Arts College where she trained to Advanced 1 and 2 in Ballet, Tap and Modern with the ISTD. During her time at Reynolds; Sophie completed her Dance Diploma, BTEC Level 3 in Sport (Performance and Excellence), NVQ Level 3 in Sports Performance, NVQ Level 2-Activity Leadership in Dance and NVQ Level 2- Exercise and Fitness (Gym Based Exercise). Upon Sophie’s graduation and after having assisted dance classes for 5 years she embarked on her teaching career, instructing various dance styles and syllabi. Alongside her teaching work Sophie studied for her Licentiate in Freestyle Dance (ISTD) and has since gained her Level 4 BBO TQ and Intermediate British Gymnastics TQ. Sophie now has over eight years’ experience teaching various dance genres, Musical Theatre and curriculum dance and gymnastics.</p>
-            <p>Sophie loves teaching dance, from a young age it has been her dream to feed that passion onto others, see her students thrive and consequently reach their full potential. Sophie aims for her classes to be fun yet disciplined allowing her students to aspire to work hard and to reach their personal goals.</p>
-          </div>
-        </div>
+    </div><!-- end.container -->
+  </section>
 
-        <div class="about-section" data-aos="fade-up">
-          <img class="teacher-img" src="img/teachers/nat.png">
-          <div>
-            <h2>Natalie Scrutton</h2>
-            <p>Natalie is a CDET recognised dance instructor (Council of Dance Education and Trianing). Natalie has grown up performing her whole life, landing on stage at the London Palladium by the age of 6. By the age of 7, she was crowned the Under 8 Northern Disco Champion and All Ireland Disco Champion. Natalie then went on to learn other dance styles such as ballet, tap, modern and jazz at Chiltern Dance School in Liverpool. She performed in Don Quixote, The Nutcracker and Sleeping Beauty with the Liverpool Proscenium Youth Ballet Company. Natalie also performed in many pantomimes across Liverpool and New Brighton as a young ensemble member.</p>
-            <p>In school, Natalie received an A* in GCSE Dance and also achieved 100% in her GCSE Drama examination and was in the top 10 in the country that year. She also achieved an A* in ALevel Dance and ALevel Theatre Studies.</p>
-            <p>Natalie continued to perform in professional pantomimes as an ensemble member between the ages of 16 and 18 before gaining a place at the prestigious Bird College in Kent where she studied ballet, tap, jazz, contemporary, commercial, musical theatre, singing and acting. During her time at Bird she performed in 42nd Street, Anything Goes and Thoroughly Modern Millie. She graduated with a level 6 Nation Diploma in Dance and Theatre Performance in July 2014.</p>
-            <p>After graduating, Natalie moved to Paris to perform as a character and dancer in the parades at Disneyland Paris. After returning home, she began teaching what she loves and although she still enjoys performing around London, her heart lies in teaching.</p>
-          </div>
-        </div>
-
-      </div><!-- end.container -->
-    </section>
-  
 
   <!-- Footer -->
   <footer class="footer">
@@ -157,12 +179,16 @@ Proudest teaching moments: being invited to Dance in Trafalgar Square in connect
       </div>
 
       <div class="fb-iframe-container">
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <iframe
+          src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+          width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+          allowTransparency="true"></iframe>
       </div>
 
     </div><!-- end .container -->
 
-    <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
+    <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span
+        id="year"></span></p>
 
   </footer>
 
@@ -171,4 +197,5 @@ Proudest teaching moments: being invited to Dance in Trafalgar Square in connect
   <script src="js/aos.js"></script>
   <script src="js/app.js"></script>
 </body>
+
 </html>
